--- a/style.css
+++ b/style.css
@@ -7,11 +7,23 @@
   background-color: tomato;
   width: 100%;
   height: 100vh;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.task-submission {
+  background-color: wheat;
+  border-radius: 40px 40px 0px 0px;
+  width: 60%;
+  height: 20vh;
   margin-top: 40px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  box-shadow: 2px 10px 20px black;
 }
 #Armans-to-do {
   font-size: 36px;
@@ -22,16 +34,17 @@
 .input-field {
   display: flex;
   flex-direction: row;
-  width: 50%;
+  width: 100%;
+
   justify-content: center;
-  margin: 40px;
 }
 
 .input-field input {
   width: 70%;
-  height: 50px;
-  font-size: 24px;
-  padding-left: 20px;
+  height: 80px;
+  font-size: 32px;
+  padding: 10px;
+  padding-right: 70px;
   border: 0px;
   outline: none;
   border-radius: 5px;
@@ -39,8 +52,10 @@
 
 .input-field .add-task {
   position: relative;
-  right: 50px;
-  width: 50px;
+  font-size: 20px;
+  font-weight: bold;
+  right: 70px;
+  width: 70px;
   border: 0;
   border-radius: 5px;
   z-index: 2;
@@ -48,24 +63,29 @@
 }
 
 .add-task:hover {
-  width: 55px;
+  font-weight: bolder;
+  font-size: 21px;
+  letter-spacing: 0.2em;
 }
 
 .task-list {
   width: 60%;
-  margin-top: 40px;
+  border-radius: 0px 0px 10px 10px;
+  margin-bottom: 10px;
+  box-shadow: 2px 10px 20px black;
+  background-color: blueviolet;
+  height: 40%;
 }
 .tasks {
   width: 100%;
   height: 60vh;
 }
-.tasks li:nth-child(odd) {
-  background-color: antiquewhite;
-}
 
 .tasks li {
   height: 50px;
-
+  background-color: white;
+  box-shadow: 2px 2px 10px black;
+  border-radius: 8px;
   padding-left: 20px;
   font-size: 24px;
   display: flex;
@@ -81,13 +101,9 @@
   height: 100%;
   background-color: transparent;
   font-size: 24px;
-  color: white;
+  color: black;
 }
 
-.delete-task:nth-child(2) {
-  color: black !important;
-  font-size: 34px;
-}
 .hidden {
   display: none !important;
 }
