--- a/style.css
+++ b/style.css
@@ -74,11 +74,16 @@
   margin-bottom: 10px;
   box-shadow: 2px 10px 20px black;
   background-color: blueviolet;
-  height: 40%;
+
+  min-height: 250px;
 }
 .tasks {
   width: 100%;
   height: 60vh;
+  overflow: auto;
+
+  margin-bottom: 10px;
+  padding-right: 10px;
 }
 
 .tasks li {
@@ -106,4 +111,22 @@
 
 .hidden {
   display: none !important;
+}
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
 }
